fix z-index issue

--- a/src/styles/scss/components/navigation/partials/_sidemenu.scss
+++ b/src/styles/scss/components/navigation/partials/_sidemenu.scss
@@ -16,6 +16,7 @@
   position: fixed;
   right: 0;
   height: 100%;
+  z-index: 8;
 
   ul {
     height: 60%;
